--- a/css/style-admin.scss
+++ b/css/style-admin.scss
@@ -24,6 +24,16 @@ $bgc-dashboard: #f0f7ff;
 body {
   background: #f6f5f7;
   font-family: "Hind Madurai", sans-serif;
+
+  div.bloc-modale {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 99;
+  }
 }
 
 h1.h1-dashboard {
@@ -70,6 +80,91 @@ main {
   width: 100%;
   padding-left: 100px;
   z-index: -1;
+
+  // ---------- MODALE BOX DELETE BOX----------
+
+  div#box-delete-book {
+    z-index: 999;
+    width: 400px;
+    height: 500px;
+    background-color: $white;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 30px;
+    box-shadow: 0px 20px 24px -4px rgba(16, 24, 40, 0.08),
+      0px 8px 8px -4px rgba(16, 24, 40, 0.03);
+    border-radius: 10px;
+
+    p#txt-box-delete-book {
+      font-size: 1.2rem;
+      font-weight: bold;
+      margin: 0 auto 25px;
+      margin-top: 10px;
+      margin-bottom: 15px;
+      font-family: "Hind Madurai", sans-serif;
+      color: $btn-red;
+      text-align: center;
+      margin-bottom: 260px;
+    }
+
+    p#book-title-delete-box {
+      color: $main-blue;
+      font-size: 20px;
+      font-weight: bold;
+      font-family: "Nova Slim", cursive, sans-serif;
+      margin-bottom: 10px;
+      text-align: center;
+    }
+
+    img#pict-book-modale-delete-box {
+      height: 200px;
+      width: auto;
+      margin: 0 auto;
+      position: absolute;
+      top: 42%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      box-shadow: 0px 20px 24px -4px rgba(16, 24, 40, 0.08),
+        0px 8px 8px -4px rgba(16, 24, 40, 0.03);
+    }
+
+    a#btn-cancel-delete-book {
+      position: absolute;
+      left: 50px;
+      bottom: 20px;
+      border: 2px solid $main-blue;
+      color: $main-blue;
+      padding: 10px 40px;
+      border-radius: 10px;
+      font-weight: bold;
+
+      &:hover {
+        background-color: $main-blue;
+        color: #fff;
+        cursor: pointer;
+      }
+    }
+
+    a#btn-confirmed-delete-book {
+      position: absolute;
+      right: 50px;
+      bottom: 20px;
+      border: 1px solid $btn-red-hover;
+      background-color: $btn-red-hover;
+      color: $white;
+      padding: 10px 40px;
+      border-radius: 10px;
+      font-weight: bold;
+
+      &:hover {
+        background-color: $btn-main-blue-over;
+        color: $white;
+        cursor: pointer;
+      }
+    }
+  }
 }
 
 .active {
@@ -515,7 +610,180 @@ section#dashboard-page-profil {
   }
 }
 
+// ----------  SECTION lOAN BOOK REGISTER ----------
+
+section#loan-register {
+  form#form-loan-register {
+    .label-form-add-book {
+      display: block;
+      font-size: 18px;
+      margin-right: 20px;
+      color: $main-blue;
+      font-weight: bold;
+    }
+
+    .input-form-add-book {
+      width: 600px;
+      height: 44px;
+      font-size: 20px;
+      border-radius: 5px;
+      padding-left: 10px;
+      border: 1px solid gray;
+      margin-bottom: 30px;
+    }
+
+    div#form-loan-register-left {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 50%;
+
+      div.add-form-template-label-input {
+        .label-form-add-book {
+          font-size: 18px;
+          margin-right: 20px;
+        }
+      }
+    }
+
+    div#form-loan-register-right {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      textarea#work-extract {
+        width: 690px;
+        height: 600px;
+        font-size: 20px;
+        text-align: start;
+        border-radius: 5px;
+        padding-left: 10px;
+        border: 1px solid gray;
+        margin-bottom: 30px;
+      }
+    }
+
+    div#group-btn-loan-register-commun {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      margin-top: 40px;
+      margin-right: 111px;
+
+      #btn-reset-form-loan-register {
+        width: 160px;
+        height: 40px;
+        font-weight: bold;
+        border-radius: 10px;
+        background-color: transparent;
+        border: 1px solid $main-blue;
+        color: $main-blue;
+        margin-right: 30px;
+        margin-right: 20px;
+
+        &:hover {
+          cursor: pointer;
+          background-color: $main-blue;
+          color: $white;
+        }
+      }
+
+      #btn-submit-form-loan-register {
+        width: 160px;
+        height: 40px;
+        font-weight: bold;
+        border-radius: 10px;
+        background-color: $main-blue;
+        border: $main-blue;
+        color: $white;
+        margin-right: 30px;
+        margin-right: 20px;
+
+        &:hover {
+          cursor: pointer;
+          background-color: $btn-main-blue-over;
+        }
+      }
+    }
+  }
+}
+
 // ----------  SECTION DASHBOARD - PAGE CRUD----------
+
+p.info-msg-bdd-delete {
+  margin-top: 30px;
+  color: $white;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+p.info-succes-notif > strong {
+  margin: 20px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  line-height: 80px;
+  color: $white;
+}
+section#dashboard-page-book-crud {
+  div#confirmed-delete {
+    width: 350px;
+    height: 160px;
+    padding: 30px;
+    border-radius: 10px;
+    position: fixed;
+    text-align: center;
+    animation: slide-in 5000ms;
+    background-color: $main-blue;
+    opacity: 0;
+    top: 90%;
+    left: 90%;
+    transform: translate(-50%, -50%);
+    z-index: 999;
+    box-shadow: 0px 12px 16px -4px rgba(16, 24, 40, 0.08),
+      0px 4px 6px -2px rgba(16, 24, 40, 0.03);
+
+    &::after {
+      content: url(../img/picto/update-icon-notif-succes.svg);
+      position: absolute;
+      top: 10px;
+      left: 10px;
+    }
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+}
+
+div#confirmed-error {
+  width: 350px;
+  height: 160px;
+  border-radius: 10px;
+  position: fixed;
+  text-align: center;
+  animation: slide-in 5000ms;
+  background-color: $btn-red-hover;
+  color: $white;
+  opacity: 0;
+  top: 90%;
+  left: 90%;
+  transform: translate(-50%, -50%);
+  z-index: 999;
+  box-shadow: 0px 12px 16px -4px rgba(16, 24, 40, 0.08),
+    0px 4px 6px -2px rgba(16, 24, 40, 0.03);
+
+  &::after {
+    content: url(../img/picto/update-icon-notif-warning.svg);
+    position: absolute;
+    top: 10px;
+    left: 10px;
+  }
+
+  &:hover {
+    cursor: pointer;
+  }
+}
 
 .container-crud-book-tabs {
   height: fit-content;
@@ -529,7 +797,7 @@ section#dashboard-page-profil {
     top: 0;
     width: 100%;
     background-color: $white; /* couleur de fond pour la div */
-    z-index: 100;
+    z-index: 30;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -552,10 +820,9 @@ section#dashboard-page-profil {
         margin-right: 10px;
       }
 
-      button#btn-search-book {
+      input#btn-search-book {
         width: 100px;
         height: 40px;
-        font-weight: bold;
         border-radius: 10px;
         background-color: $main-blue;
         border: $main-blue;
@@ -573,10 +840,9 @@ section#dashboard-page-profil {
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 120px;
+      width: 140px;
       height: 40px;
       border-radius: 10px;
-      font-weight: bold;
       background-color: $main-blue;
       border: $main-blue;
       color: $white;
@@ -729,7 +995,6 @@ section#dashboard-page-profil {
             &.active {
               display: block;
             }
-
             div.container-flex-crud {
               width: 100%;
               display: flex;
@@ -898,7 +1163,6 @@ section#dashboard-page-book-add {
   }
 
   #confirmed-added {
-    position: relative;
     width: 350px;
     height: 160px;
     border-radius: 10px;
@@ -911,7 +1175,8 @@ section#dashboard-page-book-add {
     left: 90%;
     transform: translate(-50%, -50%);
     z-index: 999;
-    box-shadow: 0px 12px 16px -4px rgba(16, 24, 40, 0.08), 0px 4px 6px -2px rgba(16, 24, 40, 0.03);
+    box-shadow: 0px 12px 16px -4px rgba(16, 24, 40, 0.08),
+      0px 4px 6px -2px rgba(16, 24, 40, 0.03);
 
     &::after {
       content: url(../img/picto/update-icon-notif-succes.svg);
@@ -924,13 +1189,12 @@ section#dashboard-page-book-add {
       cursor: pointer;
     }
 
-
     p > strong {
       margin: auto;
       font-size: 1.2rem;
       font-weight: bold;
       line-height: 80px;
-      color: $black;
+      color: $white;
     }
 
     p.info-msg-bdd {
@@ -948,13 +1212,14 @@ section#dashboard-page-book-add {
     position: fixed;
     text-align: center;
     animation: slide-in 8000ms;
-    background-color: $white;
+    background-color: $btn-main-blue-over;
     opacity: 0;
     top: 90%;
     left: 90%;
     transform: translate(-50%, -50%);
     z-index: 999;
-    box-shadow: 0px 12px 16px -4px rgba(16, 24, 40, 0.08), 0px 4px 6px -2px rgba(16, 24, 40, 0.03);
+    box-shadow: 0px 12px 16px -4px rgba(16, 24, 40, 0.08),
+      0px 4px 6px -2px rgba(16, 24, 40, 0.03);
 
     &::after {
       content: url(../img/picto/update-icon-notif-warning.svg);
@@ -1116,7 +1381,8 @@ section#dashboard-page-book-edit {
     left: 90%;
     transform: translate(-50%, -50%);
     z-index: 999;
-    box-shadow: 0px 12px 16px -4px rgba(16, 24, 40, 0.08), 0px 4px 6px -2px rgba(16, 24, 40, 0.03);
+    box-shadow: 0px 12px 16px -4px rgba(16, 24, 40, 0.08),
+      0px 4px 6px -2px rgba(16, 24, 40, 0.03);
 
     &::after {
       content: url(../img/picto/update-icon-notif-succes.svg);
@@ -1128,7 +1394,6 @@ section#dashboard-page-book-edit {
     &:hover {
       cursor: pointer;
     }
-
 
     p > strong {
       margin: auto;
@@ -1159,7 +1424,8 @@ section#dashboard-page-book-edit {
     left: 90%;
     transform: translate(-50%, -50%);
     z-index: 999;
-    box-shadow: 0px 12px 16px -4px rgba(16, 24, 40, 0.08), 0px 4px 6px -2px rgba(16, 24, 40, 0.03);
+    box-shadow: 0px 12px 16px -4px rgba(16, 24, 40, 0.08),
+      0px 4px 6px -2px rgba(16, 24, 40, 0.03);
 
     &::after {
       content: url(../img/picto/update-icon-notif-warning.svg);
