--- a/css/style-admin.scss
+++ b/css/style-admin.scss
@@ -1106,7 +1106,7 @@ section#dashboard-page-book-add {
       justify-content: center;
       width: 50%;
 
-      textarea#work-extract {
+      textarea#work-extract-add {
         width: 690px;
         height: 600px;
         font-size: 20px;
